# crawler

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile1  application.yaml  test.json
src/: lib.rs  main.rs
src/config/: config.rs
src/crawler/: mod.rs  ytb_crawler.rs  ytb_crawler_with_swas.rs  ytb_download.rs  ytb_download_lib.rs
src/crud/: mod.rs
src/init/: mod.rs
src/model/: mod.rs
src/model/dto/: crawler_dto.rs  mod.rs  ytb_dto.rs
src/model/entitys/: crawler_entity.rs  mod.rs  ytb_entity.rs
src/model/request/: mod.rs
src/orm/: mod.rs
src/services/: crawler_service.rs  mod.rs  ytb_dl_service.rs  ytb_service.rs
src/tests/: mod.rs
src/utils/: error.rs  mod.rs
yt-api/: Cargo.toml
yt-api/examples/: complex_search.rs  playlist.rs  search.rs
yt-api/src/: lib.rs  playlistitems.rs  search.rs
