[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
tokio = {version = "1.21.2",features = ["full"] }
serde = "1.0.148"
serde_derive = "1.0.148"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
chrono = "0.4.23"  #time and date
lazy_static ="1.4.0"
thread_local="1.1.4"
rbson = "2.0"
rbatis = { version = "3.1.16", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
#对象存储
state = { version = "0.5.3", features = ["tls"] }
#缓存 支持redis 本地缓存
cached = {version="0.40.0",features = ["redis_store","redis_async_std","async"]}
#log
log = "0.4"
fast_log = { version="1.5.1", features = ["lz4","zip", "gzip"]}
#getset
getset = "0.1.2"
md5 = "0.7.0"
async-trait = "0.1.58"
#redis
redis = { version = "0.22.1", features = ["tokio"] }
#sqlparse sql解析器
sqlparser = "0.27.0"
base64 = "0.13.1"
random-number = "0.1.8"
cron = "0.12.0"
thirtyfour = "0.31.0"
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
yt-api = { path = "./yt-api" }
tinyjson = "*"

[dev-dependencies]
tokio-test = "0.4.2"